Fix button alignment

--- a/packages/ui/src/styles/components/button.sass
+++ b/packages/ui/src/styles/components/button.sass
@@ -6,5 +6,8 @@
 	@extend %buttonStates
 	+buttonVariants()
 
+	&-content
+		@extend %buttonEssentials-content
+
 	&-spinner
 		@extend %buttonStates-spinner
